# vl-embedding-test

./: .gitignore  README.md  app_compare_clip.py  demo_chinese_clip.py  demo_fg_clip2.py  demo_qwen3_vl_embedding.py  export_chinese_clip_flat.py  export_chinese_clip_onnx.py  export_fgclip2_flat.py  export_fgclip2_onnx.py  export_flat_common.py  export_openclip_flat.py  main.py  ort_runtime.py  project_layout.py  pyproject.toml  quantize_fgclip2_onnx.py  split_fgclip2_text_embedding.py
docs/: fgclip2-onnx-usage.md  fgclip2-optimization-log.md  fgclip2-rust-runtime-plan.md  model-layout.md
rust-onnx-verify/: Cargo.toml  README.md
rust-onnx-verify/src/: main.rs
scripts/: migrate_fgclip2_layout.py  run_app_onnx_cuda.ps1  run_app_onnx_macos.sh
