[package]
name = "fgclip2-onnx-verify"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
ndarray = "0.17"
ort = "2.0.0-rc.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokenizers = { version = "0.22", default-features = false, features = ["onig"] }
